--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <title>Frontend API</title>
     <link href="styles.css" rel="stylesheet">
     <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src = "config/config.js"></script>
 </head>
 <body>
 
@@ -15,7 +16,8 @@
             <div class="dropdown-content">
                 <a onclick="renderFindPhoneByNameForm()">Найти телефон по имени</a>
                 <a onclick="renderFindPhoneByNumberForm()">Найти телефон по номеру</a>
-                <a onclick="renderCreatePhoneForm()">Создать|Обновить телефон</a>
+                <a onclick="renderCreatePhoneForm()">Создать телефон</a>
+                <a onclick="renderUpdatePhoneForm()">Обновить телефон</a>
                 <a onclick="renderDeletePhoneForm()">Удалить телефон</a>
                 <a onclick="getPhones()">Посмотреть список</a>
                 <a onclick="writeToCSV()">Записать в CSV</a>
